Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>David Shaun Brown</h1>
     <p>Software Developer | Machine Learning | Web & Mobile Apps</p>
     <nav>
       <a href="#about">About</a>
@@ -48,13 +48,13 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/your-linkedin" target="_blank">linkedin.com/in/your-linkedin</a></p>
+    <p>Email: <a href="mailto:shaunbellekay@icloud.com">shaunbellekay@icloud.com</a></p>
+    <p>GitHub: <a href="https://github.com/greatshotkid" target="_blank">github.com/greatshotkid</a></p>
+    
   </section>
 
   <footer>
-    <p>© 2025 Your Name. All rights reserved.</p>
+    <p>© 2025 DSBrown. All rights reserved.</p>
   </footer>
 </body>
 </html>
